Final touches completed for initial site push

--- a/naga.html
+++ b/naga.html
@@ -51,31 +51,26 @@
           <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/zee.png" alt="naga logo">
             <h3 class="headline--tertiary">ZeeKiwi.HCG</h3>
           </a>
-          <hr>
         </div>
         <div class="skills--card">
           <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/flexy.png" alt="main logo">
             <h3 class="headline--tertiary">Flexy.HCG</h3>
           </a>
-          <hr>
         </div>
         <div class="skills--card">
           <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/mrv.png" alt="main logo">
             <h3 class="headline--tertiary">MRV2.HCG</h3>
           </a>
-          <hr>
         </div>
         <div class="skills--card">
           <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/kinky.png" alt="tranquil logo">
             <h3 class="headline--tertiary">Kinky.HCG</h3>
           </a>
-          <hr>
         </div>
         <div class="skills--card">
           <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/murky.png" alt="main logo">
             <h3 class="headline--tertiary">Murky.HCG</h3>
           </a>
-          <hr>
         </div>
       </div>
     </div>
@@ -192,6 +187,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+  <script src="JS/responsiveslides.min.js"></script>
   <script src="JS/main.js"></script>
 
 </body>
