--- a/smash.html
+++ b/smash.html
@@ -52,7 +52,6 @@
                             alt="naga logo">
                         <h3 class="headline--tertiary">PlayZ.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <!-- <div class="skills--card">
                     <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/benji.png"
@@ -178,6 +177,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+    <script src="JS/responsiveslides.min.js"></script>
     <script src="JS/main.js"></script>
 
 
