--- a/sponsors.html
+++ b/sponsors.html
@@ -160,10 +160,10 @@
 
             <nav id="inline-footer-nav">
                 <ul>
-                    <li class="nav__item"><a href="#">Home</a></li>
-                    <li class="nav__item"><a href="#news">News</a></li>
-                    <li class="nav__item"><a href="#sponsors">Sponsors</a></li>
-                    <li class="nav__item"><a href="#teams">Teams</a></li>
+                    <li class="nav__item"><a href="index.html">Home</a></li>
+                    <li class="nav__item"><a href="index.html#news">News</a></li>
+                    <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
+                    <li class="nav__item"><a href="index.html#teams">Teams</a></li>
                     <li class="nav__item"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -178,6 +178,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+    <script src="JS/responsiveslides.min.js"></script>
     <script src="JS/main.js"></script>
 
 
