--- a/store.html
+++ b/store.html
@@ -43,7 +43,7 @@
         <header>
             <button class="toggle-button">☰</button>
             <img class="img--logo" src="images/main-logo-large.png" alt="hydracore gaming logo">
-            <h2 class="headline--primary">Hydracore Store</h2>
+            <h2 class="headline--primary">HydraCore Store</h2>
         </header>
 
 
@@ -51,71 +51,149 @@
             <h4 id="teams" class="headline--secondary white">Available Items</h4>
             <div class="grid__col--skills">
                 <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-pro-jacket"
+                        target="_blank"><img class="img--frame__store" src="images/jacket.png" alt="Pro Jacket">
+                        <h3 class="headline--tertiary">Pro Jacket</h3>
+                        <p class="white">$79.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-pro-hoodie"
+                        target="_blank"><img class="img--frame__store" src="images/hoodie-merch.png" alt="Pro Hoodie">
+                        <h3 class="headline--tertiary">Pro Hoodie</h3>
+                        <p class="white">$69.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-pro-jersey"
+                        target="_blank"><img class="img--frame__store" src="images/jersey-merch.png" alt="Pro Jersey">
+                        <h3 class="headline--tertiary">Pro Jersey</h3>
+                        <p class="white">$54.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-joggers"
+                        target="_blank"><img class="img--frame__store" src="images/pants-merch.png" alt="Pro Joggers">
+                        <h3 class="headline--tertiary">Pro Joggers</h3>
+                        <p class="white">$49.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-flag"
+                        target="_blank"><img class="img--frame__store" src="images/flag-merch.png" alt="Pro Flag">
+                        <h3 class="headline--tertiary">HydraCore Flag</h3>
+                        <p class="white">$44.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-logo-hoodie"
+                        target="_blank"><img class="img--frame__store" src="images/hoodie.png" alt="Hydra Hoodie">
+                        <h3 class="headline--tertiary">HydraCore Hoodie</h3>
+                        <p class="white">$34.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-shorts"
+                        target="_blank"><img class="img--frame__store" src="images/shorts-merch.png" alt="Hydra Shorts">
+                        <h3 class="headline--tertiary">HydraCore Shorts</h3>
+                        <p class="white">$34.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-performance-shirt"
+                        target="_blank"><img class="img--frame__store" src="images/performance-shirt.png"
+                            alt="Hydra Pro Shirt">
+                        <h3 class="headline--tertiary">Performance Shirt</h3>
+                        <p class="white">$34.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-hat"
+                        target="_blank"><img class="img--frame__store" src="images/hat-merch.png" alt="Hydra Hat">
+                        <h3 class="headline--tertiary">HydraCore Hat</h3>
+                        <p class="white">$29.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-compression-sleeves"
+                        target="_blank"><img class="img--frame__store" src="images/sleeves.png" alt="Hydra Sleeves">
+                        <h3 class="headline--tertiary">Compression Sleeves</h3>
+                        <p class="white">$24.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
+                    <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-logo-shirt"
+                        target="_blank"><img class="img--frame__store" src="images/shirt.png" alt="Hydra T-Shirt">
+                        <h3 class="headline--tertiary">HydraCore T-Shirt</h3>
+                        <p class="white">$19.99 USD</p>
+                    </a>
+                </div>
+                <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=597&cid=102534&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/beach-towel.png" alt="naga logo">
+                        target="_blank"><img class="img--frame__store" src="images/beach-towel.png" alt="Beach Towel">
                         <h3 class="headline--tertiary">Beach Towel</h3>
                         <p class="white">$25.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=658&cid=102950&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/coffee-mug.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/coffee-mug.png" alt="Coffee Mug">
                         <h3 class="headline--tertiary">Coffee Mug</h3>
                         <p class="white">$10.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=636&cid=102607&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/black-socks.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/black-socks.png" alt="Black Socks">
                         <h3 class="headline--tertiary">Black Socks</h3>
                         <p class="white">$15.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=706&cid=103046&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/white-socks.png" alt="tranquil logo">
+                        target="_blank"><img class="img--frame__store" src="images/white-socks.png" alt="White Socks">
                         <h3 class="headline--tertiary">White Socks</h3>
                         <p class="white">$15.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=633&cid=102591&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/iphone-case.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/iphone-case.png" alt="iPhone Case">
                         <h3 class="headline--tertiary">iPhone Case</h3>
                         <p class="white">$19.99 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=704&cid=103084&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/samsung-case.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/samsung-case.png" alt="Samsung Case">
                         <h3 class="headline--tertiary">Samsung Case</h3>
                         <p class="white">$19.99 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=641&cid=102637&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/leggings.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/leggings.png" alt="Leggings">
                         <h3 class="headline--tertiary">Leggings</h3>
                         <p class="white">$30.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=585&cid=102425&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/pillow.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/pillow.png" alt="Pillow">
                         <h3 class="headline--tertiary">Indoor Pillow</h3>
                         <p class="white">$20.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=624&cid=102380&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/poster.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/poster.png" alt="Poster">
                         <h3 class="headline--tertiary">Poster</h3>
                         <p class="white">$18.00 USD</p>
                     </a>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=794&cid=103544&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/sticker.png" alt="main logo">
+                        target="_blank"><img class="img--frame__store" src="images/sticker.png" alt="Sticker">
                         <h3 class="headline--tertiary">Die-cut Sticker</h3>
                         <p class="white">$7.00 USD</p>
                     </a>
@@ -149,10 +227,10 @@
 
             <nav id="inline-footer-nav">
                 <ul>
-                    <li class="nav__item"><a href="#">Home</a></li>
-                    <li class="nav__item"><a href="#news">News</a></li>
+                    <li class="nav__item"><a href="index.html">Home</a></li>
+                    <li class="nav__item"><a href="index.html#news">News</a></li>
                     <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
-                    <li class="nav__item"><a href="#teams">Teams</a></li>
+                    <li class="nav__item"><a href="index.html#teams">Teams</a></li>
                     <li class="nav__item"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -166,6 +244,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+    <script src="JS/responsiveslides.min.js"></script>
     <script src="JS/main.js"></script>
 
 
