--- a/turbulent.html
+++ b/turbulent.html
@@ -52,14 +52,12 @@
                             alt="main logo">
                         <h3 class="headline--tertiary">HoboJ3nk1ns.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card" id="myBtn">
                     <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/grizzly.png"
                             alt="naga logo">
                         <h3 class="headline--tertiary">Grizzly.HCG</h3>
                     </a>
-                    <hr>
                 </div>
 
                 <div class="skills--card">
@@ -67,21 +65,18 @@
                             alt="main logo">
                         <h3 class="headline--tertiary">Scotty2K.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card">
                     <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/trenta.png"
                             alt="tranquil logo">
                         <h3 class="headline--tertiary">Trenta.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card">
                     <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/lotus.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">D_redeemr.HCG</h3>
                     </a>
-                    <hr>
                 </div>
             </div>
         </div>
@@ -218,6 +213,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+    <script src="JS/responsiveslides.min.js"></script>
     <script src="JS/main.js"></script>
 
 
