--- a/media.html
+++ b/media.html
@@ -46,13 +46,20 @@
       <h2 class="headline--primary">Media and Videos</h2>
     </header>
     <div class="wrapper">
-      <div class="grid__row" id="news">
+      <div class="grid__row--videos">
         <div class="grid__col--12">
           <div class="card">
             <h4 class="headline--secondary white">Team Submitted Videos</h4>
 
 
             <ul class="list--primary">
+              <li class="highlight-videos">
+                <div class="video-responsive">
+                  <iframe width="853" height="480" src="https://www.youtube.com/embed/eTJkMn0Saqc" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+              </li>
               <li class="highlight-videos">
                 <div class="video-responsive">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/m2XTqRLsFkw" frameborder="0"
@@ -114,10 +121,10 @@
 
       <nav id="inline-footer-nav">
         <ul>
-          <li class="nav__item"><a href="#">Home</a></li>
-          <li class="nav__item"><a href="#news">News</a></li>
+          <li class="nav__item"><a href="index.html">Home</a></li>
+          <li class="nav__item"><a href="index.html#news">News</a></li>
           <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
-          <li class="nav__item"><a href="#teams">Teams</a></li>
+          <li class="nav__item"><a href="index.html#teams">Teams</a></li>
           <li class="nav__item"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -131,6 +138,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+  <script src="JS/responsiveslides.min.js"></script>
   <script src="JS/main.js"></script>
 
 
