--- a/synergy.html
+++ b/synergy.html
@@ -52,35 +52,30 @@
                             alt="naga logo">
                         <h3 class="headline--tertiary">Azohar_.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card">
                     <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/benji.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">Benji.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card">
                     <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/panda.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">Panda.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card">
                     <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/empire.png"
                             alt="tranquil logo">
                         <h3 class="headline--tertiary">Empire.HCG</h3>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card">
                     <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/eagle.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">MrEagleEye.HCG</h3>
                     </a>
-                    <hr>
                 </div>
             </div>
         </div>
@@ -193,6 +188,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+    <script src="JS/responsiveslides.min.js"></script>
     <script src="JS/main.js"></script>
 
 
