--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
       <h2 class="headline--primary">About</h2>
-      <div class="grid__col--proj">
+      <div class="grid__col--about">
         <img class="img--banner" src="images/siege-background.png">
         <p>HydraCore Gaming was founded by Jamie Zudonyi, aka "ZeeKiwi" in 2017. The organization has continued to grow
           over the last few years under Jamie's professional leadership. With Jamie's charismatic personality and
