--- a/store.html
+++ b/store.html
@@ -49,7 +49,7 @@
 
         <div class="wrapper">
             <h4 id="teams" class="headline--secondary white">Available Items</h4>
-            <div class="grid__col--skills">
+            <div class="grid__col--store">
                 <div class="skills--card__store">
                     <a href="https://sectorsixapparel.com/collections/hydracore-gaming/products/hydracore-gaming-pro-jacket"
                         target="_blank"><img class="img--frame__store" src="images/jacket.png" alt="Pro Jacket">
