fixed a spelling error

--- a/store.html
+++ b/store.html
@@ -203,7 +203,7 @@
         </div>
 
         <h4 class="headline--secondary" id="contact">Contact</h4>
-        <p>If you're interested in joining a team or want more information about the orginazation, we'd love to hear
+        <p>If you're interested in joining a team or want more information about the organization, we'd love to hear
             from
             you!</p>
         <ul class="contact-info">
