--- a/naga.html
+++ b/naga.html
@@ -147,7 +147,7 @@
 
 
     <h4 class="headline--secondary" id="contact">Contact</h4>
-    <p>If you're interested in joining a team or want more information about the orginazation, we'd love to hear from
+    <p>If you're interested in joining a team or want more information about the organization, we'd love to hear from
       you!</p>
     <ul class="contact-info">
       <li><a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="contact-icons"
