--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
             <h3 class="headline--tertiary">Team Smash</h3>
           </a>
         </div>
+        <div class="skills--card">
+          <a href="spz.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
+            <h3 class="headline--tertiary">Team SPZ Squad</h3>
+          </a>
+        </div>
       </div>
 
     </div>
