added team adrenaline's page

--- a/index.html
+++ b/index.html
@@ -147,11 +147,6 @@
             <h3 class="headline--tertiary">Team Synergy</h3>
           </a>
         </div>
-        <!-- <div class="skills--card">
-          <a href="tranquil.html"><img class="img--frame__teams" src="images/team-tranquil.png" alt="tranquil logo">
-            <h3 class="headline--tertiary">Team Tranquil</h3>
-          </a>
-        </div> -->
         <div class="skills--card">
           <a href="smash.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
             <h3 class="headline--tertiary">Team Smash</h3>
@@ -160,6 +155,11 @@
         <div class="skills--card">
           <a href="spz.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
             <h3 class="headline--tertiary">Team SPZ Squad</h3>
+          </a>
+        </div>
+        <div class="skills--card">
+          <a href="adrenaline.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
+            <h3 class="headline--tertiary">Team Adrenaline</h3>
           </a>
         </div>
       </div>
