--- a/naga.html
+++ b/naga.html
@@ -46,6 +46,7 @@
       <h2 class="headline--primary">Team Naga</h2>
     </header>
     <div class="wrapper">
+      <h2 class="headline--primary white">Rainbow Six Siege</h2>
       <div class="grid__col--skills">
         <div class="skills--card" id="myBtn">
           <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/zee.png" alt="naga logo">
