--- a/spz.html
+++ b/spz.html
@@ -46,6 +46,7 @@
             <h2 class="headline--primary">Team SPZ Squad</h2>
         </header>
         <div class="wrapper">
+            <h2 class="headline--primary white">Call of Duty</h2>
             <div class="grid__col--skills">
                 <div class="skills--card" id="myBtn">
                     <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/creepybacon.png"
