Removed Qolst from roster

--- a/adrenaline.html
+++ b/adrenaline.html
@@ -48,12 +48,12 @@
         <div class="wrapper">
             <h2 class="headline--primary white">FORTNITE</h2>
             <div class="grid__col--skills">
-                <div class="skills--card" id="myBtn">
+                <!-- <div class="skills--card" id="myBtn">
                     <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/ainsley.png"
                             alt="naga logo">
                         <h3 class="headline--tertiary">QoLSt.HCG</h3>
                     </a>
-                </div>
+                </div> -->
                 <div class="skills--card">
                     <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/cheezum_logo.png"
                             alt="main logo">
