Removed 3 R6 teams from roster

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="wrapper">
       <h4 id="teams" class="headline--secondary white">Hydracore Teams</h4>
       <div class="grid__col--skills">
-        <div class="skills--card">
+        <!-- <div class="skills--card">
           <a href="naga.html"><img class="img--frame__teams" src="images/team-naga.png" alt="naga logo">
             <h3 class="headline--tertiary">Team Naga</h3>
           </a>
@@ -146,7 +146,7 @@
           <a href="synergy.html"><img class="img--frame__teams" src="images/synergy-logo.png" alt="main logo">
             <h3 class="headline--tertiary">Team Synergy</h3>
           </a>
-        </div>
+        </div> -->
         <div class="skills--card">
           <a href="smash.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
             <h3 class="headline--tertiary">Team Smash</h3>
