updated the news section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,38 @@
           <div class="card">
             <h2 class="headline--primary white">News</h2>
             <ul class="rslides">
+
+              <li>
+                <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--large" src="images/join-banner.png"></a>
+                <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--mobile" src="images/main-logo.png"></a>
+                <p class="white">HydraCore Gaming has initiated a consolidation of teams across all gaming platforms and
+                  game titles to allow additional focus to be given to performing teams. HCG has narrowed its focus on
+                  retaining marketable and valuable players and has thus reduced its number of underperforming and less
+                  than professional team members. This has opened a wide availability for new players seeking a
+                  competitive organization for any pro-league aspirations to tryout for HydraCore Gaming. So, if you are
+                  interested, click the tryout link below and submit an application! Your future in competitive gaming
+                  awaits!</p>
+              </li>
+
+              <li class="white">
+                <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
+                <p class="white">The admin panel for HCG is in the developmental stages on a complete business strategy
+                  overhaul to set the sights of the organization on the future and the adaptation to the ever-shifting
+                  market of eSports. This business strategy is being developed in an effort to make HCG a more
+                  professional organization for its member as well as a more desirable business for its sponsors.</p>
+
+              </li>
+              <li class="white">
+                <p class="white">HCG is proud to announce that it has filled its directoral ranks with two
+                  highly-qualified individuals. We would like to welcome and congratulate CreepyBacon, the team captain
+                  of our very own SPZ Squad, on his promotion to the Director of Marketing. .</p>
+                <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
+                <p class="white">Additionally, we would like to congratulate Rules, our resident analyst and coach for
+                  our R6S teams, on his promotion to the Director of Human Resources. Finally, we would like to offer
+                  our warm kudos to Scotty, previously our lead support representative, on his promotion to the admin
+                  panel. These men have displayed a superior abiltiy to be effective leaders in this organization and
+                  will greatly contribute to all of our future successes. Great job, guys!</p>
+              </li>
               <li>
                 <p class="white">HydraCore Gaming is pleased to announce it's legendary partnership with Sector Six
                   Apparel! This has allowed HCG exclusive access to discount codes for all fans and players to buy HCG
@@ -68,31 +100,6 @@
                   like Polar Ace, Space Station Gaming and many more!</p>
                 <p class="white">Go check out our new pro shop using the link on our sponsor page and enter our discount
                   code at checkout to receive a 5 percent discount on all HCG items!</p>
-              </li>
-              <li>
-                <a href="smash.html"><img class="news--large" src="images/smash-art.jpg"></a>
-                <a href="smash.html"><img class="news--mobile" src="images/smash-art-mobile.jpg"></a>
-                <p class="white">Team Smash Ultimate [Playz and Kerchak] participated in the largest Smash Ultimate
-                  tournament in the Southeast and placed highly within a large pool of amazing players.</p>
-                <p class="white">Unfortunately Kerchak was not able to compete and was DQ in the initial stages of the
-                  pool but Playz placed 27th/170 players, defeating pro players and tough adversaries on his journey to
-                  the top of the player board!</p>
-                <p class="white">Playz and Kerchak are expected to take control of the Southeast Smash Ultimate scene
-                  and go pro in the very near future, and we can only say we are glad to have them on our roster wearing
-                  the HCG name proudly while they sweep through the competition in this rapidly rising eSports game!
-                  Great job guys!</p>
-              </li>
-              <li class="white">
-                <p class="white">Interested in joining HydraCore Gaming? Do you feel that you have a particular set of
-                  skills you want to unleash in the competitive scene?</p>
-                <p class="white">Feel free to shoot us an email application and an admin should be in contact with you
-                  within 24 hours.</p>
-                <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--large" src="images/join-banner.png"></a>
-                <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--mobile" src="images/main-logo.png"></a>
-                <p class="white">If you are having difficulty reaching an admin please feel free to join the discord
-                  using the link on the homepage and message an admin directly from there. Please do not directly go
-                  through Discord to submit an application as our admins will check to ensure you did indeed submit
-                  through the website.</p>
               </li>
               <li class="white">
                 <p class="white">Are you interested in getting some chill time in with our members? Are you wanting to
