updated news section, added player to SPZ squad page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
             <h2 class="headline--primary white">News</h2>
             <ul class="rslides">
 
+              <li class="white">
+                <p class="white">HCG is proud to announce that it has filled its directoral ranks with two
+                  highly-qualified individuals. We would like to welcome and congratulate CreepyBacon, the team captain
+                  of our very own SPZ Squad, on his promotion to the Director of Marketing. .</p>
+                <img class="img-news" src="images/creepybacon.png" alt="creepy picture">
+                <img class="img-news" src="images/scotty.png" alt="scotty picture">
+                <img class="img-news" src="images/rules.png" alt="rules picture">
+                <p class="white">Additionally, we would like to congratulate Rules, our resident analyst and coach for
+                  our R6S teams, on his promotion to the Director of Human Resources. Finally, we would like to offer
+                  our warm kudos to Scotty, previously our lead support representative, on his promotion to the admin
+                  panel. These men have displayed a superior abiltiy to be effective leaders in this organization and
+                  will greatly contribute to all of our future successes. Great job, guys!</p>
+              </li>
+
               <li>
                 <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--large" src="images/join-banner.png"></a>
                 <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--mobile" src="images/main-logo.png"></a>
@@ -76,17 +90,7 @@
                   professional organization for its member as well as a more desirable business for its sponsors.</p>
 
               </li>
-              <li class="white">
-                <p class="white">HCG is proud to announce that it has filled its directoral ranks with two
-                  highly-qualified individuals. We would like to welcome and congratulate CreepyBacon, the team captain
-                  of our very own SPZ Squad, on his promotion to the Director of Marketing. .</p>
-                <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
-                <p class="white">Additionally, we would like to congratulate Rules, our resident analyst and coach for
-                  our R6S teams, on his promotion to the Director of Human Resources. Finally, we would like to offer
-                  our warm kudos to Scotty, previously our lead support representative, on his promotion to the admin
-                  panel. These men have displayed a superior abiltiy to be effective leaders in this organization and
-                  will greatly contribute to all of our future successes. Great job, guys!</p>
-              </li>
+
               <li>
                 <p class="white">HydraCore Gaming is pleased to announce it's legendary partnership with Sector Six
                   Apparel! This has allowed HCG exclusive access to discount codes for all fans and players to buy HCG
@@ -177,7 +181,7 @@
     <p>If you're interested in joining a team or want more information about the organization, we'd love to hear from
       you!</p>
     <ul class="contact-info">
-      <li><a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="contact-icons"
+      <li><a href="https://discord.gg/Yh3SsDM" target="_blank"><img class="contact-icons"
             src="images/discord-icon.png"></a></li>
       <li><a href="mailto:HydraCoreGaming@gmail.com" target="_blank"><img class="contact-icons"
             src="images/email-icon.png"></a>
