--- a/spz.html
+++ b/spz.html
@@ -66,13 +66,13 @@
                         <h3 class="headline--tertiary">PattyTheMelt.HCG</h3>
                     </a>
                 </div>
-                <!-- <div class="skills--card">
-                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/empire.png"
+                <div class="skills--card">
+                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/Wildswagasaurus.png"
                             alt="tranquil logo">
-                        <h3 class="headline--tertiary">Empire.HCG</h3>
+                        <h3 class="headline--tertiary">Wildswagasaurus.HCG</h3>
                     </a>
                 </div>
-                <div class="skills--card">
+                <!-- <div class="skills--card">
                     <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/eagle.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">MrEagleEye.HCG</h3>
@@ -130,12 +130,14 @@
             </ul>
         </div>
 
-        <!-- <div id="ex4" class="modal">
-            <img class="modal-logo" src="images/empire_logo.jpg">
-            <p>I’m 23 years old father of 3. Love playing rainbow six siege. I run my own water business Check it out -
-                Ninepointfive.life</p> -->
-        <!-- <a href="#" rel="modal:close">Close</a> -->
-        <!-- </div> -->
+        <div id="ex4" class="modal">
+            <img class="modal-logo" src="images/Wildswagasaurus-logo.png">
+            <p>Wildswagasaurus aka John Snow aka David Spade and if that isn’t brought to bring you in then you don’t
+                belong here. Wildswagasaurus enjoys your casual best down session on Call of Duty and if he’s not doing
+                that he is being the life of the party always knows how to make the team laugh and keeps it fun for the
+                team to secure the wins we need.</p>
+            <a href="#" rel="modal:close">Close</a>
+        </div>
 
         <!-- <div id="ex5" class="modal">
             <img class="modal-logo" src="images/eagle_logo.jpg">
