small bug fix to news section

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     
                       <p class="white">HCG has decided to host its own semi-annual cash tournament with a 150 dollar prize pool. The first place prize is 100 dollars in R6 credits (20 dollar R6 credit codes to every member of the winning team) and the second place prize is 50 dollars (10 dollar R6 credit codes to every member of the runner-up team). There is NO entry fee necessary whatsoever! The tournament will take place on Saturday, September 28th, time to be decided.</p>
                       <hr>
-                      <img class="news--large" src="images/hydracore-tourn-banner.png" alt="hydracore tournament banner">
-                      <img class="news--mobile" src="images/hydracore-tourn-banner.png" alt="hydracore tournament banner">
+                      <a href="https://discord.gg/Yh3SsDM" target="_blank"><img class="news--large" src="images/hydracore-tourn-banner.png" alt="hydracore tournament banner"></a>
+                        <a href="https://discord.gg/Yh3SsDM" target="_blank"><img class="news--mobile" src="images/hydracore-tourn-banner.png" alt="hydracore tournament banner"></a>
                       <hr>
                       <p class="white"> Join the HCG Discord by clicking the banner below and entering via the #hydracore-tournament-entries chat channel by posting using the pinned template. Stick around for news and updates on the tournaments and we hope to see a huge turn out! Casters will be participating in the tournament and will be streaming each game. The final videos will be available on ZeeKiwi's Youtube channel.
                         </p>
