General news updates

--- a/store.html
+++ b/store.html
@@ -215,6 +215,10 @@
             <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
                         src="images/twitter-icon.png"></a></li>
         </ul>
+        <p>If you'd like to try out for one of our teams, fill out our <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfSJVbs5hrRhPWnzyXj44pKxDOQ0RYqh9TzEoy23p4fx8SIcw/viewform"
+                class="link">Tryout
+                Application </a>to setup an interview!</p>
         </div>
         <hr>
 
