--- a/sponsors.html
+++ b/sponsors.html
@@ -43,7 +43,7 @@
         <header>
             <button class="toggle-button">☰</button>
             <img class="img--logo" src="images/main-logo-large.png" alt="hydracore gaming logo">
-            <h2 class="headline--primary">The Next Evolution in eSports</h2>
+            <h2 class="headline--primary">Meraki Nikao</h2>
         </header>
         <div class="wrapper">
             <div class="grid__row" id="sponsors">
@@ -148,6 +148,10 @@
             <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
                         src="images/twitter-icon.png"></a></li>
         </ul>
+        <p>If you'd like to try out for one of our teams, fill out our <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfSJVbs5hrRhPWnzyXj44pKxDOQ0RYqh9TzEoy23p4fx8SIcw/viewform"
+                class="link">Tryout
+                Application </a>to setup an interview!</p>
         </div>
         <hr>
 
