added team adrenaline

--- a/adrenaline.html
+++ b/adrenaline.html
@@ -55,9 +55,9 @@
                     </a>
                 </div> -->
                 <div class="skills--card">
-                    <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/cheezum_logo.png"
+                    <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/potato.jpg"
                             alt="main logo">
-                        <h3 class="headline--tertiary">BiggithyCheezum.HCG</h3>
+                        <h3 class="headline--tertiary">Potato.HCG</h3>
                     </a>
                 </div>
                 <!-- <div class="skills--card">
@@ -101,10 +101,11 @@
         </div>
 
         <div id="ex2" class="modal">
-            <img class="modal-logo" src="images/cheezum_logo.png">
-            <p>I am a fifteen year-old male with grammatical OCD. I have been playing games since I was young, but
-                started playing on PC in 2015. I have been passionately playing Fortnite since Season 3. I have a
-                particular, but not astonishing skillset when it comes to playing just about any game.
+            <img class="modal-logo" src="images/potato.jpg">
+            <p>Reed “Potato” Gillman is a 16 year old high school student. He moved to Oklahoma at the age of 3. He
+                started gaming courtesy of his brother buying an XBOX 360 in 2011. He was an avid swimmer in the first 2
+                years of his high school career, but he is now focused on his studies as well as gaming/streaming in his
+                free time. He hopes that Hydracore one day makes a big splash in the Fortnite competitive scene.
             </p>
             <!-- <ul class="contact-info">
                 <li><a href="https://www.twitter.com/ePoptarts" target="_blank"><img class="contact-icons"
@@ -162,6 +163,10 @@
             <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
                         src="images/twitter-icon.png"></a></li>
         </ul>
+        <p>If you'd like to try out for one of our teams, fill out our <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfSJVbs5hrRhPWnzyXj44pKxDOQ0RYqh9TzEoy23p4fx8SIcw/viewform"
+                class="link">Tryout
+                Application </a>to setup an interview!</p>
         </div>
         <hr>
 
