--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                   organization make him a significant value added to HydraCore!</p>
 
                 <hr>
-                <img class="img-news" src="images/kinky_news.jpg" alt="Kinky">
-                <!-- <img class="img-news" src="images/kinky_news.jpg" alt="Kinky"> -->
-                <img class="img-news" src="images/draven_news.jpg" alt="Draven">
-                <!-- <img class="img-news" src="images/draven_news.jpg" alt="Draven"> -->
+                <img class="news--large__double" src="images/kinky_news.jpg" alt="Kinky">
+                <!-- <img class="news--mobile__double" src="images/kinky_news.jpg" alt="Kinky"> -->
+                <img class="news--large__double" src="images/draven_news.jpg" alt="Draven">
+                <!-- <img class="news--mobile__double" src="images/draven_news.jpg" alt="Draven"> -->
                 <hr>
                 <p class="white">Draven has also accepted the offer for the position of Director of Marketing (DoM) of
                   which he brings years of marketing experience and expertise! This position is far from easy to manage,
@@ -106,10 +106,10 @@
                   league once we get the system down pat!</p>
 
                 <hr>
-                <img class="img-news" src="images/7stages.png" alt="7 Stages Logo">
-                <!-- <img class="img-news" src="images/kinky_news.jpg" alt="Kinky"> -->
-                <img class="img-news" src="images/jupiter_rising.png" alt="Jupiter Rising Logo">
-                <!-- <img class="img-news" src="images/draven_news.jpg" alt="Draven"> -->
+                <img class="news--mobile__double" src="images/7stages.png" alt="7 Stages Logo">
+                <!-- <img class="news--mobile__double" src="images/7stages.png" alt="7 Stages Logo"> -->
+                <img class="news--mobile__double" src="images/jupiter_rising.png" alt="Jupiter Rising logo">
+                <!-- <img class="news--mobile__double" src="images/jupiter_rising.png" alt="Jupiter Rising logo"> -->
                 <hr>
                 <p class="white">We want to ensure we host flawless and seamless tournament experiences for all of our
                   competitors. For now, we are proud to announce our tournament winners, 7 Sages, as our very first
